crates/tests/libs/bindgen/data/error/vararg_callback_not_supported/input.rdl

#[win32]
mod Test {
    extern "C" fn Handler(a: i32, ...);
}
        